GUI-1776: Fix alignment of VPC Network field and remove unwanted border around Inbound/Outbound rules container in Create Security Group dialog on launch wizards

--- a/eucaconsole/static/sass/eucaconsole.scss
+++ b/eucaconsole/static/sass/eucaconsole.scss
@@ -893,6 +893,9 @@ textarea.hidden {
     form .row.controls-wrapper {
         margin-bottom: 1rem;
     }
+    .tabs-content {
+        border: none;
+    }
     .button.expand {
         margin-bottom: 0;
         &:focus {
